# pythia

./: .gitignore  LICENSE  README.md  bare-metal-setup-start-here.md  pyproject.toml
docker/: Dockerfile.serve
docs/: d8-backfill.md  data-schema.md  decisions.md  fat-daily-report.json  methodology.md  p0-acceptance.md  p1-report.json  p3-intraday-design.md  p5-design.md
k8s/: 00-namespace.yaml  intraday-backtest-job.yaml  nightly-retrain-cronjob.yaml  serve-deployment.yaml
scripts/: assemble_dataset.py  assemble_intraday.py  backtest_intraday.py  nightly_retrain.py  register_breakouts.py  register_range_block.py  register_report.py  score_baselines.py  train_p1_tft.py
src/pythia/: __init__.py  breakouts.py  config.py  range_serve.py
src/pythia/backtest/: __init__.py  harness.py  intraday.py  protocols.py  splits.py
src/pythia/baselines/: __init__.py  last_return.py  random_walk.py  range_baselines.py  raptor_direction.py  raptor_p_move.py
src/pythia/data/: __init__.py  assembler.py  calendar_features.py  historical.py  intraday.py  pmove_history.py  source.py
src/pythia/features/: __init__.py  lag.py  targets.py
src/pythia/metrics/: __init__.py  calibration.py  crps.py  directional.py  pinball.py  point.py
src/pythia/models/: __init__.py  adapter.py  conformal.py  dataset.py  intraday_tft.py  quantile_loss.py  tft_lite.py
src/pythia/registry/: __init__.py  models.py
src/pythia/serve/: __init__.py  app.py
tests/: test_baselines.py  test_breakouts.py  test_calendar_features.py  test_conformal.py  test_eval_mask.py  test_feature_lag_no_within_row_leakage.py  test_harness_end_to_end.py  test_historical_backfill.py  test_horizon_purge.py  test_intraday_assembler.py  test_intraday_backtest.py  test_intraday_tft_target.py  test_metrics.py  test_multitarget.py  test_range_backtest.py  test_range_serve.py  test_raptor_baselines.py  test_registry_serve.py  test_splits_no_lookahead.py  test_targets.py  test_tft_lite_smoke.py
