[project]
name = "pythia"
version = "0.1.0"
description = "Decoupled probabilistic forecasting harness for QQQ + the macro board — dataset, walk-forward backtest, honest baselines, calibration-first metrics."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "pyarrow>=14",
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pythia"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
