[project]
name = "pythia"
version = "0.1.0"
description = "Decoupled probabilistic forecasting harness for QQQ + the macro board — dataset, walk-forward backtest, honest baselines, calibration-first metrics."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "pyarrow>=14",
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
# D8 historical backfill provider (opt-in; the core Postgres path needs none).
backfill = ["yfinance>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pythia"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-nested-functions = true
ignore-property-decorators = true
# Ratchet plan (helen 2026-07-16, docstring ratchet epic):
#   phase 1: fail-under = 60  (this PR — actual 85.2%)
#   phase 2: fail-under = 70
#   phase 3: fail-under = 80
#   phase 4: fail-under = 90
# Bump each phase only after "actual" clears the new floor.
fail-under = 60
exclude = ["tests", "scripts", "docker"]
verbose = 1
